# postgres-app

./: .gitignore  README.md  docker-compose.yml  main.py  mock.py  pyproject.toml
resources/: init-db.sql
