[tool.poetry]
name = "postgres-app"
version = "0.0.1"
description = "Postgres App: Some experiments to understand better Postgress database."
authors = ["Anthony Caliani <avcaliani.it@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
